--- a/app/views/hotdeals/edit.html.erb
+++ b/app/views/hotdeals/edit.html.erb
@@ -14,7 +14,7 @@
         <!-- <%= f.select :h_spare_12, ([["No Tax?", ""], "Yes"])%> -->
         <!-- <%= f.select :h_spare_13, ([["Write Blog?", ""], "Yes"])%> -->
         <!-- <%= f.select :h_spare_06, ([["Ship to Korea", ""], "Yes"])%> -->
-        <%= f.select :h_spare_18, ([["Free Shippng?", ""], "Yes"])%>
+        <!-- <%= f.select :h_spare_18, ([["Free Shippng?", ""], "Yes"])%> -->
         <div class="form_btn"><%= f.button :submit %></div><br />
         
         <div class="basic_info">
