--- a/app/views/promocodes/edit.html.erb
+++ b/app/views/promocodes/edit.html.erb
@@ -11,7 +11,7 @@
         <!-- <%= f.select :p_banner, ([["Do You Have A Banner?", ""], "YES"])%> -->
         <!-- <%= f.select :p_spare_02, ([["In Stock", ""], "Only in a few stock left"])%> -->
         <!-- <%= f.select :p_spare_05, ([["Subscribe & Save?", ""], "Yes"])%> -->
-        <%= f.select :p_spare_10, ([["Free shipping?", ""], "Yes"])%><br /><br />
+        <!-- <%= f.select :p_spare_10, ([["Free shipping?", ""], "Yes"])%><br /><br /> -->
         <!-- <%= f.select :p_spare_01, ([["Ship to Korea", ""], "Yes"])%> -->
         <div class="pricing clearfix">
           <%= f.input :p_spare_26, label: 'List Price' %>
