--- a/app/views/deals/_header_store.html.erb
+++ b/app/views/deals/_header_store.html.erb
@@ -4,7 +4,7 @@
     <div class="sub_nav_pc">
       <ul class="clearfix">
         <li><a href="/deals/stores">Home</a></li>
-        <li class="coumos1"><a href="/storepromotions">Sales Offer & Promotions</a></li>
+        <li class="coumos1"><a href="/storepromotions">Sales & Promotions</a></li>
         <li><a href="/storedeals">Bargains By Store</a></li>
         <!-- <li><a href="/deals/most_reviewed">Most-Reviewed</a></li>
         <li class="coumos" ><a href="/deals/promotions">Sales Offer & Promotions</a></li>
@@ -23,7 +23,7 @@
         <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li>
         <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li>
         <li class="top_menu"><a href="/deals/stores">Bargain By Store</a></li>
-        <li><a href="/storepromotions">COUPONS & PROMOTIONS,</a></li>
+        <li><a href="/storepromotions">SALES & PROMOTIONS,</a></li>
         <li><a href="/storedeals">THE BEST DEALS</a></li>
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
