--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -26,6 +26,7 @@
         </div>
         <div class="rt_cnt">
           <h2>Real Time Hot Deal Finder on Amazon</h2>
+          <h2 class="for_m">Real Time Hot Deal Finder on Amazon</h2>
           
           <%= render 'shared/amz_search' %>
            
