--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -180,6 +180,7 @@
 .deals_card .image_box .mark{position:absolute;top:5px;left:5px;background:#000;color:#fff;width:50px;padding:7px;line-height:1.1;font-size:13px;text-align:center;border-radius:10px;}
 .deals_card .image_box .mark span{letter-spacing:3.1px;}
 .deals_card .image_box .mark em{display:block;letter-spacing:3.1px;}
+.deals_card .image_box .mark em.wcoup{font-size:10px;letter-spacing:0.5px;}
 .deals_card .image_box .dropped{top:55px;}
 .deals_card .image_box .dropped em{font-size:10px;}
 .deals_card .image_box .term{width:70px;height:42px;/*background:#ff0000;*/}
