--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -179,6 +179,7 @@
 .deals_card .image_box{width:100%;height:250px;padding:25px 25px 10px 25px;position:relative;}
 .deals_card .image_box .mark{position:absolute;top:5px;left:5px;background:#000;color:#fff;width:50px;padding:7px;line-height:1.1;font-size:13px;text-align:center;border-radius:10px;}
 .deals_card .image_box .mark span{letter-spacing:3.1px;}
+.deals_card .image_box .mark span.wcou_01{font-size:11px;}
 .deals_card .image_box .mark em{display:block;letter-spacing:3.1px;}
 .deals_card .image_box .mark em.wcoup{font-size:10px;letter-spacing:0.5px;}
 .deals_card .image_box .dropped{top:55px;}
@@ -187,6 +188,7 @@
 .deals_card .image_box .term p{margin-top:7px;font-size:11px;}
 .deals_card .image_box .exprie{background:#ff4d4d;}
 .deals_card .image_box .endtoday{background:#ffa500;width:50px;position:absolute;top:50px;left:4px;}
+.deals_card .image_box .wcoupon{background:#87c442;}
 .deals_card .image_box .endtoday p{margin:0;height:auto;}
 .deals_card .image_box .expried{-webkit-filter: grayscale(100%);filter: gray;height:100%;}
 .deals_card img{width:70%;height:70%;object-fit:contain;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);object-fit:contain;}
