before adding active storage

--- a/app/views/storepromotions/_table.html.erb
+++ b/app/views/storepromotions/_table.html.erb
@@ -72,14 +72,13 @@
   </tr>
   <tr><td>Net-A-Porter</td><td>https://bit.ly/2T2Vq7v</td><td>https://i.pinimg.com/564x/50/19/75/5019757e7d5697b8b0b8ca9c6ebf0fe4.jpg</td></tr>
   <tr><td>Jcrew</td><td>https://bit.ly/2QQa7YM</td><td>https://i.pinimg.com/564x/63/31/92/6331923cb30e8b4af2ace88f2522cfa4.jpg</td></tr>
-  <tr><td>Site_Name</td><td>https://bit.ly/2Qt3sov</td><td>https://i.pinimg.com/564x/18/08/9d/18089d4a417bc18a335dce81cb09cb00.jpg</td></tr>
   <tr><td>Finish Line</td><td>https://bit.ly/2Qt3sov</td><td>https://i.pinimg.com/564x/18/08/9d/18089d4a417bc18a335dce81cb09cb00.jpg</td></tr>
   <tr><td>Eddie Bauer</td><td>https://bit.ly/37XZpWQ</td><td>https://i.pinimg.com/564x/60/8d/f1/608df14ea71879d3f377ddf6ad6a112a.jpg</td></tr>
   <tr><td>Sierra</td><td>https://bit.ly/2Rao9EE</td><td>https://i.pinimg.com/564x/b2/5b/6e/b25b6e7cfc9964900e3f97d4b2f27d52.jpg</td></tr>
   <tr><td>Dick's Sporting Goods</td><td>https://bit.ly/2RkwSUK</td><td>https://i.pinimg.com/564x/e7/e0/b6/e7e0b66a005587cf760e7282abd69be7.jpg</td></tr>
   <tr><td>Mr Porter</td><td>https://bit.ly/2QVHmex</td><td>https://i.pinimg.com/564x/aa/1b/ce/aa1bce24cfff7b5445d5328238560e4c.jpg</td></tr>
-  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
-  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>macys</td><td>https://bit.ly/2wlwECV</td><td>https://i.pinimg.com/564x/07/bf/92/07bf92abe3e766c51a14adf5128fc919.jpg</td></tr>
+  <tr><td>Kmart</td><td>https://bit.ly/3biTDln</td><td>https://i.pinimg.com/564x/e4/a3/9f/e4a39f24225001ca8700065197a0b908.jpg</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
 
  
