--- a/app/views/promocodes/index.html.erb
+++ b/app/views/promocodes/index.html.erb
@@ -2,7 +2,12 @@
 <div class="layout"><!--layout-->
   <div class="wrap">  
     <%= render 'shared/header_short' %>
-    <div class="dealpage_title"><p>The Coupons on Amazon</p></div>
+    <!-- <div class="dealpage_title"><p>The Coupons on Amazon</p></div> -->
+    <div class="deals_main_menu clearfix">
+      <ul>
+        <li class="nth_1"><a href="/deals/bestdeals">Amazon's Bargain</a><a href="/deals/stores"><span>, Bargain By Store</span></a></li>
+      </ul>    
+    </div>
     <%= render 'promocodes/header' %>  
     
     <!-- <div class="amz_slider_banner">
