--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -9,7 +9,7 @@
         <li><a href="/deals/promo_codes">Today's Coupon Codes</a></li>
         <!-- <li class="more"><a href="/promocodes">[ More Codes ]</a></li> -->
         <li><a href="/deals/quick_search">Real Time Hot Deal Finder</a></li>
-        <li><a href="/deals/most_reviewed">Most-Reviewed</a></li>
+        <!-- <li><a href="/deals/most_reviewed">Most-Reviewed</a></li> -->
         <!-- <li><a href="/deals/picked_deals">Best Deals</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
         <li class="coumos" ><a href="/deals/promotions">Sales Offer & Promotions</a></li>
@@ -28,7 +28,7 @@
         <li><a href="/deals/promo_codes">TODAY'S COUPON CODES,</a></li>
         <!-- <li><a href="/promocodes"> - MORE CODES,</a></li> -->
         <li><a href="/deals/quick_search">REAL TIME HOT DEAL FINDER,</a></li>
-        <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li>
+        <!-- <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li> -->
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
         <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li>
