--- a/app/views/deals/promotions.html.erb
+++ b/app/views/deals/promotions.html.erb
@@ -4,7 +4,7 @@
   <%= render 'shared/header_short' %>
   <div class="deals_main_menu clearfix">
     <ul>
-      <li class="nth_1"><a href="/deals/bestdeals">Amazon's Bargain</a><a href="/deals/stores"><span>, Bargain By Store</span></a></li>
+      <li class="nth_1"><a href="/deals/bestdeals">Amazon's Bargain</a><a href="/storepromotions"><span>, Bargain By Store</span></a></li>
     </ul>    
   </div>
   <%= render 'deals/header' %>   
