--- a/app/views/hotdeals/index.html.erb
+++ b/app/views/hotdeals/index.html.erb
@@ -7,7 +7,7 @@
     <!-- <div class="dealpage_title"><p>The Best Bargain on Amazon</p></div> -->
     <div class="deals_main_menu clearfix">
       <ul>
-        <li class="nth_1"><a href="/deals/bestdeals">Amazon's Bargain</a><a href="/deals/stores"><span>, Bargain By Store</span></a></li>
+        <li class="nth_1"><a href="/deals/bestdeals">Amazon's Bargain</a><a href="/storepromotions"><span>, Bargain By Store</span></a></li>
       </ul>    
     </div>
     <%= render 'hotdeals/header' %>  
