--- a/app/views/promocodes/_header.html.erb
+++ b/app/views/promocodes/_header.html.erb
@@ -9,7 +9,7 @@
         <li><a href="/promocodes">Coupon Codes</a></li>
         <!-- <li class="more"><a href="/deals/promo_codes">[ Daily Codes ]</a></li> -->
         <li><a href="/deals/quick_search">Real Time Hot Deal Finder</a></li>
-        <li><a href="/deals/most_reviewed">Most-Reviewed</a></li>
+        <!-- <li><a href="/deals/most_reviewed">Most-Reviewed</a></li> -->
         <li class="coumos" ><a href="/deals/promotions">Promotions</a></li>
         <li><% if can? :update, @promocodes %><%= link_to 'New Code', new_promocode_path %><% end %></li>
         <!-- <li class="search"><%= form_for "",url: promocodes_path, role: "search", method: :get do %><%= text_field_tag :search, @search_term, placeholder: "Search..." %><% end %></li> -->
@@ -26,7 +26,7 @@
         <li><a href="/promocodes">COUPON CODES,</a></li>
         <!-- <li><a href="/promocodes"> - MORE CODES,</a></li> -->
         <li><a href="/deals/quick_search">REAL TIME HOT DEAL FINDER,</a></li>
-        <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li>
+        <!-- <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li> -->
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
         <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li>
