--- a/app/views/shared/_footer2.html.erb
+++ b/app/views/shared/_footer2.html.erb
@@ -19,7 +19,7 @@
           <li><a href="/recommends">#Featured</a></li>
           <li><a href="/deals/bestdeals">#Bargain Of Amazon</a></li>
           <li><a href="/deals/stores">#Bargain By Store</a></li>
-          <li><a href="/deals/most_reviewed">#Most-Reviewed</a></li>
+          <!-- <li><a href="/deals/most_reviewed">#Most-Reviewed</a></li> -->
           <li><a href="/deals/quick_search">#Amazon HotDeals Finder</a></li>
           <!-- <li><a href="/deals/promotions">#Promotions</a></li> -->
           <li><a href="/messages">#About US</a></li>
