--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -3,6 +3,11 @@
   
   <div class="show_wrap clearfix">
     <div class="wrap">
+    <div class="deals_main_menu clearfix">
+      <ul>
+        <li class="nth_1"><a href="/deals/bestdeals">Amazon's Bargain</a><a href="/storepromotions"><span>, Bargain By Store</span></a></li>
+      </ul>    
+    </div>
     <%= render 'deals/header_store' %>
     
       <div class="show_box clearfix">
