--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -379,7 +379,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 .translate{float:left;}
 
 /* for pagination */
-.pagination{}
+.pagination{margin-top:15px;}
 .pagination a{font-size:20px;text-decoration:none;color:#000;margin:0 0.5%;}
 .pagination a.next_page,.pagination a.previous_page{font-size:15px;}
 .pagination .current{background:#000;color:#fff;font-size:30px;border:1px solid;padding:0 10px;}
