--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -110,7 +110,7 @@
 .cu_wrap .detitle p{color:#616161;margin:10px auto;}
 .cu_wrap .detitle .tit_int{text-align:center;padding:60px;border:1px solid #ccc;}
 .cu_wrap .detitle .tit_int h2{}
-.cu_wrap .detitle .post_date{display:block;margin-top:10px;}
+.cu_wrap .detitle .post_date{display:block;}
 .cu_wrap .detitle .post_date em{margin-left:10px;}
 .cu_wrap .detitle .trial{}
 .cu_wrap .detitle .trial a{background:#08f;color:#fff;padding:10px;}
@@ -128,10 +128,16 @@
 .cu_wrap .inner>span{display:inline-block;border-bottom:1px solid #ccc;}
 .cu_wrap .inner>p{border-bottom:1px solid #ccc;margin-top:20px;}
 .cu_wrap .inner>h4{margin:10px 0 -20px 0;}
-.cu_wrap .inner>em.note{margin-top:-20px;}
+.cu_wrap .inner>em.note{margin-top:-20px;font-size:12px;border:1px dashed #ccc;border-left:0;border-right:0;padding:2px 0;}
 .cu_wrap .inner .btn{margin-top:20px;/*display:inline-block;*/}
 .cu_wrap .inner .btn>em{float:left;font-size:20px;background:#000;color:#fff;padding:3px 20px;border:1px solid #000;line-height:30px;}
 .cu_wrap .inner .btn>a{float:left;text-decoration:none;color:#000;font-size:20px;border:1px solid #000;padding:3px 20px;line-height:30px;}
+.cu_wrap .inner .review_rating{margin:10px 0;font-weight:500;}
+.cu_wrap .inner .review_rating .box{float:left;width:48%;margin:1%;text-align:center;box-shadow:0 0 20px 0 rgba(0,0,0,0.06);padding:10px 5px;}
+.cu_wrap .inner .review_rating .box p{}
+.cu_wrap .inner .review_rating .box em{}
+
+
 
 .show_more_wrapper{margin-bottom:50px;}
 .show_more_box h2{margin-bottom:5px;}
@@ -157,10 +163,8 @@
   .cu_wrap .inner>strong>span{display:inline-block;}
   /*.cu_wrap .inner>span{margin:10px 0;}*/
   .cu_wrap .inner>p{padding-bottom:10px;margin-bottom:0;border:none;}
-  .cu_wrap .inner .btn{margin:10px 0;}
-  .cu_wrap .inner .btn>em,
-  .cu_wrap .inner .btn>a{font-size:20px;padding:3px 20px;line-height:30px;}
-
+  .cu_wrap .inner .btn{margin:10px 0;text-align:center;}
+  .cu_wrap .inner .btn>em, .cu_wrap .inner .btn>a{font-size:20px;padding:3px 20px;line-height:30px;width:50%;}
   .show_more_ctn{float:none;width:100%;height:auto;margin:0 0 30px 0;}
 }
 
