--- a/app/views/recommends/_body_show.html.erb
+++ b/app/views/recommends/_body_show.html.erb
@@ -8,9 +8,11 @@
 <div class="detitle">
   <div class="tit_int">
     <h2><span><%= @recommend.re_title %></span></h2>
-    <!-- <span class="post_date"><%= @recommend.sub_number_01 %><em>by Oh,i gotta buy this</em></span> -->
     <p><%= @recommend.sub_intro %></p>
   </div>
+  <% if @recommend.sub_number_01.present? %>
+    <span class="post_date">UPDATED: <%= @recommend.sub_number_01 %> | <em>by Oh,i gotta buy this</em></span>
+  <% end %>
   <% if can? :update, @recommend %>
     <div class="btn clearfix admin">
       <em><%= link_to "Edit", edit_recommend_path(@recommend) %></em><%= link_to "Delete", recommend_path(@recommend), method: :delete, data: {confirm: "Are you sure?"}%>
@@ -29,11 +31,30 @@
   </div>
   <div class="inner">
     <strong>1. <%= @recommend.sub_title_01 %></strong>
-    <span>by <%= @recommend.sub_source_01 %></span>
+    <% if @recommend.sub_source_01.present? %><span>by <%= @recommend.sub_source_01 %></span><% end %>
+    
+    <% if @recommend.rec_spare_01.present? %>
+      <div class="review_rating clearfix">
+        <div class="box">
+          <p>Rating</p>
+          <em>Avg. <%= @recommend.rec_spare_01 %> / 5.0</em>
+        </div>
+        <div class="box">
+          <p>Reviews</p>
+          <em><%= number_with_delimiter(@recommend.rec_spare_11) %>+</em>
+        </div>  
+      </div>
+    <% end %>
+
     <div class="btn clearfix">
       <em>$<%= @recommend.sub_price_01 %></em><a target="_blank" href="<%= @recommend.sub_link_01 %>">Buy Now</a>
     </div>
-    <em class="note">Price may be changed after post published date.</em>
+    <em class="note">
+      * Price may be changed after the post published date.<br/>
+      <% if @recommend.rec_spare_01.present? %>
+        * Ratings and Reviews may be changed after the post published date.
+      <% end %>
+    </em>
     <% if @recommend.sub_intro_01.present? %>
       <!-- <div class="trix trix-container gradient recommend_trix"> -->
         <h4>About This</h4>
@@ -73,11 +94,30 @@
   </div>
   <div class="inner">
     <strong>2. <%= @recommend.sub_title_02 %></strong>
-    <span>by <%= @recommend.sub_source_02 %></span>
+    <% if @recommend.sub_source_01.present? %><span>by <%= @recommend.sub_source_02 %></span><% end %>
+
+    <% if @recommend.rec_spare_02.present? %>
+      <div class="review_rating clearfix">
+        <div class="box">
+          <p>Rating</p>
+          <em>Avg. <%= @recommend.rec_spare_02 %> / 5.0</em>
+        </div>
+        <div class="box">
+          <p>Reviews</p>
+          <em><%= number_with_delimiter(@recommend.rec_spare_12) %>+</em>
+        </div>  
+      </div>
+    <% end %>
+
     <div class="btn clearfix">
       <em>$<%= @recommend.sub_price_02 %></em><a target="_blank" href="<%= @recommend.sub_link_02 %>">Buy Now</a>
     </div>
-    <em class="note">price may be changed after post published date.</em>
+    <em class="note">
+      * Price may be changed after the post published date.<br/>
+      <% if @recommend.rec_spare_02.present? %>
+        * Ratings and Reviews may be changed after the post published date.
+      <% end %>
+    </em>
     <% if @recommend.sub_intro_02.present? %>
       <!-- <div class="trix trix-container gradient recommend_trix"> -->
         <h4>About This</h4>
@@ -117,11 +157,30 @@
   </div>
   <div class="inner">
     <strong>3. <%= @recommend.sub_title_03 %></strong>
-    <span>by <%= @recommend.sub_source_03 %></span>
+    <% if @recommend.sub_source_01.present? %><span>by <%= @recommend.sub_source_03 %></span><% end %>
+
+    <% if @recommend.rec_spare_03.present? %>
+      <div class="review_rating clearfix">
+        <div class="box">
+          <p>Rating</p>
+          <em>Avg. <%= @recommend.rec_spare_03 %> / 5.0</em>
+        </div>
+        <div class="box">
+          <p>Reviews</p>
+          <em><%= number_with_delimiter(@recommend.rec_spare_13) %>+</em>
+        </div>  
+      </div>
+    <% end %>
+
     <div class="btn clearfix">
       <em>$<%= @recommend.sub_price_03 %></em><a target="_blank" href="<%= @recommend.sub_link_03 %>">Buy Now</a>
     </div>
-    <em class="note">Price may be changed after post published date.</em>
+    <em class="note">
+      * Price may be changed after the post published date.<br/>
+      <% if @recommend.rec_spare_03.present? %>
+        * Ratings and Reviews may be changed after the post published date.
+      <% end %>
+    </em>
     <% if @recommend.sub_intro_03.present? %>
       <!-- <div class="trix trix-container gradient recommend_trix"> -->
         <h4>About This</h4>
@@ -161,11 +220,30 @@
   </div>
   <div class="inner">
     <strong>4. <%= @recommend.sub_title_04 %></strong>
-    <span>by <%= @recommend.sub_source_04 %></span>
+    <% if @recommend.sub_source_01.present? %><span>by <%= @recommend.sub_source_04 %></span><% end %>
+
+    <% if @recommend.rec_spare_04.present? %>
+      <div class="review_rating clearfix">
+        <div class="box">
+          <p>Rating</p>
+          <em>Avg. <%= @recommend.rec_spare_04 %> / 5.0</em>
+        </div>
+        <div class="box">
+          <p>Reviews</p>
+          <em><%= number_with_delimiter(@recommend.rec_spare_14) %>+</em>
+        </div>  
+      </div>
+    <% end %>
+
     <div class="btn clearfix">
       <em>$<%= @recommend.sub_price_04 %></em><a target="_blank" href="<%= @recommend.sub_link_04 %>">Buy Now</a>
     </div>
-    <em class="note">Price may be changed after post published date.</em>
+    <em class="note">
+      * Price may be changed after the post published date.<br/>
+      <% if @recommend.rec_spare_04.present? %>
+        * Ratings and Reviews may be changed after the post published date.
+      <% end %>
+    </em>
     <% if @recommend.sub_intro_04.present? %>
       <!-- <div class="trix trix-container gradient recommend_trix"> -->
         <h4>About This</h4>
@@ -205,11 +283,30 @@
   </div>
   <div class="inner">
     <strong>5. <%= @recommend.sub_title_05 %></strong>
-    <span>by <%= @recommend.sub_source_05 %></span>
+    <% if @recommend.sub_source_01.present? %><span>by <%= @recommend.sub_source_05 %></span><% end %>
+
+    <% if @recommend.rec_spare_05.present? %>
+      <div class="review_rating clearfix">
+        <div class="box">
+          <p>Rating</p>
+          <em>Avg. <%= @recommend.rec_spare_05 %> / 5.0</em>
+        </div>
+        <div class="box">
+          <p>Reviews</p>
+          <em><%= number_with_delimiter(@recommend.rec_spare_15) %>+</em>
+        </div>  
+      </div>
+    <% end %>
+
     <div class="btn clearfix">
       <em>$<%= @recommend.sub_price_05 %></em><a target="_blank" href="<%= @recommend.sub_link_05 %>">Buy Now</a>
     </div>
-    <em class="note">Price may be changed after post published date.</em>
+    <em class="note">
+      * Price may be changed after the post published date.<br/>
+      <% if @recommend.rec_spare_05.present? %>
+        * Ratings and Reviews may be changed after the post published date.
+      <% end %>
+    </em>
     <% if @recommend.sub_intro_05.present? %>
       <!-- <div class="trix trix-container gradient recommend_trix"> -->
         <h4>About This</h4>
@@ -250,11 +347,30 @@
     </div>
     <div class="inner">
       <strong>6. <%= @recommend.sub_title_06 %></strong>
-      <span>by <%= @recommend.sub_source_06 %></span>
+      <% if @recommend.sub_source_01.present? %><span>by <%= @recommend.sub_source_06 %></span><% end %>
+
+      <% if @recommend.rec_spare_06.present? %>
+        <div class="review_rating clearfix">
+          <div class="box">
+            <p>Rating</p>
+            <em>Avg. <%= @recommend.rec_spare_06 %> / 5.0</em>
+          </div>
+          <div class="box">
+            <p>Reviews</p>
+            <em><%= number_with_delimiter(@recommend.rec_spare_16) %>+</em>
+          </div>  
+        </div>
+      <% end %>
+
       <div class="btn clearfix">
         <em>$<%= @recommend.sub_price_06 %></em><a target="_blank" href="<%= @recommend.sub_link_06 %>">Buy Now</a>
       </div>
-      <em class="note">Price may be changed after post published date.</em>
+      <em class="note">
+        * Price may be changed after the post published date.<br/>
+        <% if @recommend.rec_spare_06.present? %>
+          * Ratings and Reviews may be changed after the post published date.
+        <% end %>
+      </em>
       <% if @recommend.sub_intro_06.present? %>
         <!-- <div class="trix trix-container gradient recommend_trix"> -->
           <h4>About This</h4>
@@ -296,11 +412,30 @@
     </div>
     <div class="inner">
       <strong>7. <%= @recommend.sub_title_07 %></strong>
-      <span>by <%= @recommend.sub_source_07 %></span>
+      <% if @recommend.sub_source_01.present? %><span>by <%= @recommend.sub_source_07 %></span><% end %>
+
+      <% if @recommend.rec_spare_07.present? %>
+        <div class="review_rating clearfix">
+          <div class="box">
+            <p>Rating</p>
+            <em>Avg. <%= @recommend.rec_spare_07 %> / 5.0</em>
+          </div>
+          <div class="box">
+            <p>Reviews</p>
+            <em><%= number_with_delimiter(@recommend.rec_spare_17) %>+</em>
+          </div>  
+        </div>
+      <% end %>
+
       <div class="btn clearfix">
       <em>$<%= @recommend.sub_price_07 %></em><a target="_blank" href="<%= @recommend.sub_link_07 %>">Buy Now</a>
       </div>
-      <em class="note">Price may be changed after post published date.</em>
+      <em class="note">
+        * Price may be changed after the post published date.<br/>
+        <% if @recommend.rec_spare_07.present? %>
+          * Ratings and Reviews may be changed after the post published date.
+        <% end %>
+      </em>
       <% if @recommend.sub_intro_07.present? %>
         <!-- <div class="trix trix-container gradient recommend_trix"> -->
           <h4>About This</h4>
@@ -342,11 +477,30 @@
     </div>
     <div class="inner">
       <strong>8. <%= @recommend.sub_title_08 %></strong>
-      <span>by <%= @recommend.sub_source_08 %></span>
+      <% if @recommend.sub_source_01.present? %><span>by <%= @recommend.sub_source_08 %></span><% end %>
+
+      <% if @recommend.rec_spare_08.present? %>
+        <div class="review_rating clearfix">
+          <div class="box">
+            <p>Rating</p>
+            <em>Avg. <%= @recommend.rec_spare_08 %> / 5.0</em>
+          </div>
+          <div class="box">
+            <p>Reviews</p>
+            <em><%= number_with_delimiter(@recommend.rec_spare_18) %>+</em>
+          </div>  
+        </div>
+      <% end %>
+
       <div class="btn clearfix">
         <em>$<%= @recommend.sub_price_08 %></em><a target="_blank" href="<%= @recommend.sub_link_08 %>">Buy Now</a>
       </div>
-      <em class="note">Price may be changed after post published date.</em>
+      <em class="note">
+        * Price may be changed after the post published date.<br/>
+        <% if @recommend.rec_spare_08.present? %>
+          * Ratings and Reviews may be changed after the post published date.
+        <% end %>
+      </em>
       <% if @recommend.sub_intro_08.present? %>
         <!-- <div class="trix trix-container gradient recommend_trix"> -->
           <h4>About This</h4>
@@ -388,11 +542,30 @@
     </div>
     <div class="inner">
       <strong>9. <%= @recommend.sub_title_09 %></strong>
-      <span>by <%= @recommend.sub_source_09 %></span>
+      <% if @recommend.sub_source_01.present? %><span>by <%= @recommend.sub_source_09 %></span><% end %>
+
+      <% if @recommend.rec_spare_09.present? %>
+        <div class="review_rating clearfix">
+          <div class="box">
+            <p>Rating</p>
+            <em>Avg. <%= @recommend.rec_spare_09 %> / 5.0</em>
+          </div>
+          <div class="box">
+            <p>Reviews</p>
+            <em><%= number_with_delimiter(@recommend.rec_spare_19) %>+</em>
+          </div>  
+        </div>
+      <% end %>
+
       <div class="btn clearfix">
        <em>$<%= @recommend.sub_price_09 %></em><a target="_blank" href="<%= @recommend.sub_link_09 %>">Buy Now</a>
       </div>
-      <em class="note">Price may be changed after post published date.</em>
+      <em class="note">
+        * Price may be changed after the post published date.<br/>
+        <% if @recommend.rec_spare_09.present? %>
+          * Ratings and Reviews may be changed after the post published date.
+        <% end %>
+      </em>
       <% if @recommend.sub_intro_09.present? %>
         <!-- <div class="trix trix-container gradient recommend_trix"> -->
           <h4>About This</h4>
@@ -434,11 +607,30 @@
     </div>
     <div class="inner">
       <strong>10. <%= @recommend.sub_title_10 %></strong>
-      <span>by <%= @recommend.sub_source_10 %></span>
+      <% if @recommend.sub_source_01.present? %><span>by <%= @recommend.sub_source_10 %></span><% end %>
+
+      <% if @recommend.rec_spare_10.present? %>
+        <div class="review_rating clearfix">
+          <div class="box">
+            <p>Rating</p>
+            <em>Avg. <%= @recommend.rec_spare_10 %> / 5.0</em>
+          </div>
+          <div class="box">
+            <p>Reviews</p>
+            <em><%= number_with_delimiter(@recommend.rec_spare_20) %>+</em>
+          </div>  
+        </div>
+      <% end %>
+
       <div class="btn clearfix">
         <em>$<%= @recommend.sub_price_10 %></em><a target="_blank" href="<%= @recommend.sub_link_10 %>">Buy Now</a>
       </div>
-      <em class="note">Price may be changed after post published ate.</em>
+      <em class="note">
+        * Price may be changed after the post published date.<br/>
+        <% if @recommend.rec_spare_10.present? %>
+          * Ratings and Reviews may be changed after the post published date.
+        <% end %>
+      </em>
       <% if @recommend.sub_intro_10.present? %>
         <!-- <div class="trix trix-container gradient recommend_trix"> -->
           <h4>About This</h4>
