--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -202,6 +202,7 @@
 .deals_card h3 a{text-decoration:none;color:#000;}
 .deals_card p{font-size:13px;letter-spacing:1px;font-weight:400;line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-all;-webkit-box-orient:vertical;-webkit-line-clamp:2}
 .deals_card p a{text-decoration:none;color:#000;word-break:break-word;}
+.deals_card p em{color:#fff;background:#ff0000;font-size:10px;padding:2px 5px;margin-right:7px;border-radius:7px;font-weight:bold;}
 .deals_card .price{font-weight:500;font-size:17px;line-height:30px;letter-spacing:1px;}
 .deals_card .price em{margin-right:5px;opacity:0.5;font-size:0.9em;text-decoration:line-through;}
 .deals_card a.btn{position:absolute;top:0;bottom:0;left:0;right:0;}
