--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -92,17 +92,19 @@
   .codes .card_wrap .card .image_box .dealtube button.text{color:#fff;margin-top:-3.5px;font-weight:bold;}
   .codes .card_wrap .card .image_box .dealtube img{width:25px;height:25px;margin-left:-3px;}
   .codes .card_wrap .card .inner{font-weight:400;border-right:1px solid #ccc;border-left:1px solid #ccc;float:left;width:57%;padding:1.5%;}
+  .codes .card_wrap .card .inner .new_mark{color:#fff;background:#ff0000;font-size:14px;padding:2px 5px;margin-right:7px;border-radius:7px;font-weight:bold;display:inline-block;}
   .codes .card_wrap .card .inner>.regular{color:#000;font-size:17px;border-bottom:2px solid #000;}
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;}
   .codes .card_wrap .card .inner>.shipping_condition{display:block;font-size:12px;}
-  .codes .card_wrap .card .inner>.shipping_condition>a{color:#08f;text-decoration:none;font-weight:bold;}
+  .codes .card_wrap .card .inner>.shipping_condition>a{color:#08f;text-decoration:none;font-weight:500;}
 
   .codes .card_wrap .card .inner>.status{}
   .codes .card_wrap .card .inner>.status>ul{}
   .codes .card_wrap .card .inner>.status>ul>li{float:left;margin:0 5px 3px 0;background:#000;color:#fff;border-radius:10px;font-size:13px;padding:0 5px;}
 
-  .codes .card_wrap .card .inner>p>a{line-height:1.4;height:2.8em;overflow:hidden;margin:10px 0;text-decoration:none;color:#616161;display:block;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-word;-webkit-box-orient:vertical;-webkit-line-clamp:2}
+  .codes .card_wrap .card .inner>p>a{line-height:1.4;height:2.8em;overflow:hidden;margin:10px 0;text-decoration:none;color:#616161;display:block;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-word;-webkit-box-orient:vertical;-webkit-line-clamp:2;}
   .codes .card_wrap .card .inner>p>a>span{color:#fff;background:#08f;padding:0 5px;border-radius:5px;}
+  .codes .card_wrap .card .inner>p>em{display:inline-block;}
   .codes .card_wrap .card .inner>strong>a{color:#08f;}
 
   .codes .card_wrap .card .inner>.prime_more>a{color:#08f;font-weight:bold;}
@@ -233,10 +235,11 @@
 
   .codes .card_wrap .card .inner{padding:7px;font-weight:400}
   .codes .card_wrap .card .inner_top{margin-top:50px;}
+  .codes .card_wrap .card .inner .new_mark{color:#fff;background:#ff0000;font-size:14px;padding:2px 5px;margin-right:7px;border-radius:7px;font-weight:bold;display:inline-block;}
   .codes .card_wrap .card .inner>.regular{font-size:13px;border-bottom:2px solid #000;}
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;font-size:20px;}
   .codes .card_wrap .card .inner>.shipping_condition{display:block;font-size:12px;}
-  .codes .card_wrap .card .inner>.shipping_condition>a{color:#08f;text-decoration:none;font-weight:bold;}
+  .codes .card_wrap .card .inner>.shipping_condition>a{color:#08f;text-decoration:none;font-weight:500;}
   .codes .card_wrap .card .inner>.status{}
   .codes .card_wrap .card .inner>.status>ul{}
   .codes .card_wrap .card .inner>.status>ul>li{float:left;margin:0 5px 3px 0;background:#000;color:#fff;border-radius:10px;font-size:13px;padding:0 5px;}
