--- a/app/views/promocodes/edit.html.erb
+++ b/app/views/promocodes/edit.html.erb
@@ -59,6 +59,7 @@
         </div>
         <%= f.input :p_spare_50, label: 'Expired Date' %><br />
         <%= f.input :p_spare_51, label: 'Ends Today' %><br />
+        <%= f.input :p_spare_52, label: 'For New Sticker' %><br />
         <!-- <%= f.input :p_description, label: 'Description Of Product' %> -->
         <%= f.input :p_spare_36, as: :trix_editor, label: 'Description Of Product with TRIX' %> 
 
