--- a/app/views/storepromotions/_form.html.erb
+++ b/app/views/storepromotions/_form.html.erb
@@ -27,6 +27,7 @@
         <%= f.input :sp_end_date, input_html: { class: "promo_date" }, label: 'Ends Date' %>
         <%= f.input :sp_spare_60, label: 'Expired Date' %>
         <%= f.input :sp_spare_61, label: 'Ends Today' %>        
+        <%= f.input :sp_spare_93, label: 'For New Mark' %>        
       </div>
       <%= f.input :sp_description, as: :trix_editor, label: 'Description of Deal' %>
     </div>
