--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -123,6 +123,7 @@
 .sp_wrap .sp_right .date_comm em.expired{background:#ff4d4d;color:#fff;padding:4px 5px;font-size:11px;border-radius:10px;}
 .sp_wrap .sp_right .date_comm em.endtoday{background:#ffa500;color:#fff;padding:4px 5px;font-size:11px;border-radius:10px;}
 .sp_wrap .sp_right .inner{float:left;width:80%;margin-left:5%;}
+.sp_wrap .sp_right .inner em.new_mark{color: #fff;background:#ff0000;font-size:14px;padding:2px 5px;margin-right:7px;border-radius:7px;font-weight:bold;}
 .sp_wrap .sp_right .inner p{display:inline-block;}
 .sp_wrap .sp_right .inner span.index_title{font-weight:500;border:1px solid #ccc;padding:0 5px;}
 .sp_wrap .sp_right .inner .date_pc{display:inline;float:right;}
