--- a/app/views/storepromotions/index.html.erb
+++ b/app/views/storepromotions/index.html.erb
@@ -92,9 +92,25 @@
               </div>
               <div class="inner">
                 <% if storepromotion.sp_store_name.present? %>
-                  <p><span class="index_title"><%= storepromotion.sp_store_name %></span>
+                  <p>
+                    <% if storepromotion.sp_spare_93 && (storepromotion.sp_spare_93 < Date.today) %>
+                    <% else %>
+                      <% if storepromotion.sp_spare_93 && (storepromotion.sp_spare_93 = Date.today) %>
+                        <em class="new_mark">New</em>
+                      <% end %>
+                    <% end %>
+                    <span class="index_title"><%= storepromotion.sp_store_name %></span>
+                  </p>
                 <% else %>
-                  <p><span class="index_title"><%= storepromotion.spcategory.name %></span>
+                  <p>
+                    <% if storepromotion.sp_spare_93 && (storepromotion.sp_spare_93 < Date.today) %>
+                    <% else %>
+                      <% if storepromotion.sp_spare_93 && (storepromotion.sp_spare_93 = Date.today) %>
+                        <em class="new_mark">New</em>
+                      <% end %>
+                    <% end %>
+                    <span class="index_title"><%= storepromotion.spcategory.name %></span>
+                  </p>
                 <% end %>
                   <!--
                   <% if storepromotion.sp_spare_40.present? || storepromotion.sp_spare_42.present?%>
